Add align and roundup_pow_of_two helpers
[ Upstream commit 7a4e013003983258715964d4c28f282fd43493ef ]

Add align and roundup_pow_of_two helper functions to util common code.
Adapt mlx4 and mlx5 providers to use these functions, EFA will follow in
downstream patch.

ilog.[ch] and compiler.h were added to ccan in order to implement the
functions.

Signed-off-by: Gal Pressman <galpress@amazon.com>
Signed-off-by: Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>

--- a/ccan/CMakeLists.txt
+++ b/ccan/CMakeLists.txt
@@ -3,7 +3,9 @@ publish_internal_headers(ccan
   bitmap.h
   build_assert.h
   check_type.h
+  compiler.h
   container_of.h
+  ilog.h
   list.h
   minmax.h
   str.h
@@ -12,6 +14,7 @@ publish_internal_headers(ccan
 
 set(C_FILES
   bitmap.c
+  ilog.c
   list.c
   str.c
   )
