azp: Use ubuntu-latest as the vmImage
[ Upstream commit 1164379f15c9b2c5139ccd0de8e6bbce027b3aad ]

Newer Ubuntu's have newer kernels which should speed up the container
we run/etc.

Signed-off-by: Jason Gunthorpe <jgg@mellanox.com>
Signed-off-by: Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>

--- a/buildlib/azure-pipelines.yml
+++ b/buildlib/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
       - job: Compile
         displayName: Compile Tests
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - task: PythonScript@0
@@ -101,7 +101,7 @@ stages:
       - job: SrcPrep
         displayName: Build Source Tar
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - checkout: self
@@ -128,7 +128,7 @@ stages:
         displayName: Test Build RPMs for
         dependsOn: SrcPrep
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             centos7:
