--- a/buildlib/azure-pipelines.yml
+++ b/buildlib/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
       - job: Compile
         displayName: Compile Tests
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - task: PythonScript@0
@@ -137,7 +137,7 @@ stages:
       - job: SrcPrep
         displayName: Build Source Tar
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - checkout: self
@@ -164,7 +164,7 @@ stages:
         displayName: Test Build RPMs for
         dependsOn: SrcPrep
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             centos6:
