--- a/buildlib/azure-pipelines.yml
+++ b/buildlib/azure-pipelines.yml
@@ -46,7 +46,7 @@ stages:
       - job: Compile
         displayName: Compile Tests
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - task: PythonScript@0
@@ -140,7 +140,7 @@ stages:
       - job: SrcPrep
         displayName: Build Source Tar
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - checkout: self
@@ -167,7 +167,7 @@ stages:
         displayName: Test Build RPMs for
         dependsOn: SrcPrep
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             centos6:
