tests: Add Atomic traffic tests
Add new atomic traffic tests to cover multiple atomic flows.
The tests cover both FETCH_AND_ADD and CMP_AND_SWP opcodes including
some bad flows.

Signed-off-by: Ido Kalir <idok@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ rdma_python_test(tests
   mlx5_prm_structs.py
   rdmacm_utils.py
   test_addr.py
+  test_atomic.py
   test_cq.py
   test_cq_events.py
   test_cqex.py
