mlx5: Add crypto login DV API
Add a new DV API to manage crypto login sessions. The API allows
performing crypto login, crypto logout and querying for the current
crypto login state.

An active crypto login session is needed in order to manage Data
Encryption Keys (DEKs) for crypto engines that are in wrapped import
method.

The import method defines how sensitive data (such as DEKs) should be
loaded into the device, and may impose some extra runtime steps. Wrapped
import method requires authentication by logging in with credentials in
order to manage DEKs.

DEK management API will be added in next commit.

Signed-off-by: Avihai Horon <avihaih@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/CMakeLists.txt
+++ b/providers/mlx5/man/CMakeLists.txt
@@ -8,6 +8,7 @@ rdma_man_pages(
   mlx5dv_create_flow_matcher.3.md
   mlx5dv_create_mkey.3.md
   mlx5dv_create_qp.3.md
+  mlx5dv_crypto_login.3.md
   mlx5dv_dci_stream_id_reset.3.md
   mlx5dv_devx_alloc_uar.3.md
   mlx5dv_devx_create_cmd_comp.3.md
@@ -50,6 +51,8 @@ rdma_man_pages(
 rdma_alias_man_pages(
  mlx5dv_alloc_var.3 mlx5dv_free_var.3
  mlx5dv_create_mkey.3 mlx5dv_destroy_mkey.3
+ mlx5dv_crypto_login.3 mlx5dv_crypto_login_query_state.3
+ mlx5dv_crypto_login.3 mlx5dv_crypto_logout.3
  mlx5dv_devx_alloc_uar.3 mlx5dv_devx_free_uar.3
  mlx5dv_devx_create_cmd_comp.3 mlx5dv_devx_destroy_cmd_comp.3
  mlx5dv_devx_create_event_channel.3 mlx5dv_devx_destroy_event_channel.3
