mlx5: Add crypto setter for MKey
Add crypto setter for mlx5dv_wr_mkey_configure() - the MKey
configuration work request builder.

The setter configures MKey with crypto properties. With this, the device
can encrypt/decrypt data when transmitting data from memory to network
and when receiving data from network to memory.

Crypto properties can be configured along with signature properties.

Signed-off-by: Avihai Horon <avihaih@nvidia.com>
Reviewed-by: Sergey Gorenko <sergeygo@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/CMakeLists.txt
+++ b/providers/mlx5/man/CMakeLists.txt
@@ -46,6 +46,7 @@ rdma_man_pages(
   mlx5dv_vfio_get_events_fd.3.md
   mlx5dv_vfio_process_events.3.md
   mlx5dv_wr_post.3.md
+  mlx5dv_wr_set_mkey_crypto.3.md
   mlx5dv_wr_set_mkey_sig_block.3.md
   mlx5dv.7
 )
