verbs: Add generic logging API
A debug prints mechanism is useful when debugging application failures.
This patch adds a generic API that can be used by all providers and
replace provider-specific counterparts.

The debug messages are controlled through an environment variable named
VERBS_LOG_LEVEL, where the value indicates which prints should be
enabled:

enum {
	VERBS_LOG_LEVEL_NONE,
	VERBS_LOG_ERR,
	VERBS_LOG_WARN,
	VERBS_LOG_INFO,
	VERBS_LOG_DEBUG,
};

For example, to enable prints with level warn or higher, VERBS_LOG_LEVEL
shall be set to 2.

The output shall be written to the file provided in the VERBS_LOG_FILE
environment variable. When the library is compiled in debug mode and no
file is provided the output shall be written to stderr.

For data-path flows, where the overhead of the additional if statement
matters, the verbs_*_datapath() macros can be used, which will be
compiled out when the library is compiled for release.

Signed-off-by: Gal Pressman <galpress@amazon.com>

--- a/libibverbs/libibverbs.map.in
+++ b/libibverbs/libibverbs.map.in
@@ -172,6 +172,7 @@ IBVERBS_PRIVATE_@IBVERBS_PABI_VERSION@ {
 	global:
 		/* These historical symbols are now private to libibverbs */
 		__ioctl_final_num_attrs;
+		__verbs_log;
 		_verbs_init_and_alloc_context;
 		execute_ioctl;
 		ibv_cmd_advise_mr;
