mlx5: DR, Support ASO CT cross domain
Add the ability for an ASO CT action created on one domain to be used on
different domain.
This will allow the connection tracking of packet traffic across two
ports with the same ASO CT object.

Signed-off-by: Hamdan Igbaria <hamdani@nvidia.com>
Signed-off-by: Alex Vesker <valex@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/CMakeLists.txt
+++ b/providers/mlx5/man/CMakeLists.txt
@@ -98,6 +98,8 @@ rdma_alias_man_pages(
  mlx5dv_dr_flow.3 mlx5dv_dr_action_destroy.3
  mlx5dv_dr_flow.3 mlx5dv_dr_action_modify_aso.3
  mlx5dv_dr_flow.3 mlx5dv_dr_action_modify_flow_meter.3
+ mlx5dv_dr_flow.3 mlx5dv_dr_aso_other_domain_link.3
+ mlx5dv_dr_flow.3 mlx5dv_dr_aso_other_domain_unlink.3
  mlx5dv_dr_flow.3 mlx5dv_dr_domain_allow_duplicate_rules.3
  mlx5dv_dr_flow.3 mlx5dv_dr_domain_create.3
  mlx5dv_dr_flow.3 mlx5dv_dr_domain_destroy.3
