mlx5: DR, New user API for setting matcher layout
It will give the user the ability to define the exact layout of the matcher.
The user can define specific flags:
MLX5DV_DR_MATCHER_LAYOUT_RESIZABLE - the matcher can change its size.
MLX5DV_DR_MATCHER_LAYOUT_NUM_RULE - indicates the size of the matcher.

The feature is only supported in definer, when using a definer the
matcher includes only one htble, and this one is the htble that will
grow to the new size etc.

In addition when matcher layout is set to non resizable, the domain
should be aware that it can use a multi-queues for postsending rules.

Signed-off-by: Erez Shitrit <erezsh@nvidia.com>
Signed-off-by: Alex Vesker <valex@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/CMakeLists.txt
+++ b/providers/mlx5/man/CMakeLists.txt
@@ -97,6 +97,7 @@ rdma_alias_man_pages(
  mlx5dv_dr_flow.3 mlx5dv_dr_domain_set_reclaim_device_memory.3
  mlx5dv_dr_flow.3 mlx5dv_dr_matcher_create.3
  mlx5dv_dr_flow.3 mlx5dv_dr_matcher_destroy.3
+ mlx5dv_dr_flow.3 mlx5dv_dr_matcher_set_layout.3
  mlx5dv_dr_flow.3 mlx5dv_dr_rule_create.3
  mlx5dv_dr_flow.3 mlx5dv_dr_rule_destroy.3
  mlx5dv_dr_flow.3 mlx5dv_dr_table_create.3
