tests/mlx5: Add tests for mlx5 DMA memcpy WR
Add multiple tests to cover DMA GGA feature, including bad flows.
The tests cover data verification and MR access protection.

Reviewed-by: Amit Matityahu <mitm@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ rdma_python_test(tests
   test_mlx5_dc.py
   test_mlx5_devx.py
   test_mlx5_dm_ops.py
+  test_mlx5_dma_memcpy.py
   test_mlx5_dr.py
   test_mlx5_flow.py
   test_mlx5_lag_affinity.py
