--- a/providers/mlx5/man/CMakeLists.txt
+++ b/providers/mlx5/man/CMakeLists.txt
@@ -10,6 +10,7 @@ rdma_man_pages(
   mlx5dv_create_qp.3.md
   mlx5dv_crypto_login.3.md
   mlx5dv_dci_stream_id_reset.3.md
+  mlx5dv_dek_create.3.md
   mlx5dv_devx_alloc_uar.3.md
   mlx5dv_devx_create_cmd_comp.3.md
   mlx5dv_devx_create_event_channel.3.md
@@ -53,6 +54,8 @@ rdma_alias_man_pages(
  mlx5dv_create_mkey.3 mlx5dv_destroy_mkey.3
  mlx5dv_crypto_login.3 mlx5dv_crypto_login_query_state.3
  mlx5dv_crypto_login.3 mlx5dv_crypto_logout.3
+ mlx5dv_dek_create.3 mlx5dv_dek_query.3
+ mlx5dv_dek_create.3 mlx5dv_dek_destroy.3
  mlx5dv_devx_alloc_uar.3 mlx5dv_devx_free_uar.3
  mlx5dv_devx_create_cmd_comp.3 mlx5dv_devx_destroy_cmd_comp.3
  mlx5dv_devx_create_event_channel.3 mlx5dv_devx_destroy_event_channel.3
