--- a/debian/control
+++ b/debian/control
@@ -305,6 +305,7 @@ Description: InfiniBand diagnostic programs
 Package: libibmad5
 Section: libs
 Architecture: linux-any
+Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Infiniband Management Datagram (MAD) library
@@ -318,6 +319,7 @@ Description: Infiniband Management Datagram (MAD) library
 Package: libibmad-dev
 Section: libdevel
 Architecture: linux-any
+Multi-Arch: same
 Depends: libibmad5 (= ${binary:Version}), ${misc:Depends}
 Description: Development files for libibmad
  libibmad provides low layer Infiniband functions for use by the
@@ -332,6 +334,7 @@ Description: Development files for libibmad
 Package: libibnetdisc5
 Section: libs
 Architecture: linux-any
+Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: InfiniBand diagnostics library
@@ -346,6 +349,7 @@ Description: InfiniBand diagnostics library
 Package: libibnetdisc-dev
 Section: libdevel
 Architecture: linux-any
+Multi-Arch: same
 Depends: libibnetdisc5 (= ${binary:Version}), ${misc:Depends}
 Breaks: infiniband-diags (<< 2.0.0)
 Replaces: infiniband-diags (<< 2.0.0)
