--- a/debian/rules
+++ b/debian/rules
@@ -90,6 +90,9 @@ override_dh_installsystemd:
 	dh_installsystemd -pibacm ibacm.socket
 	dh_installsystemd --remaining-packages
 
+override_dh_compress:
+	dh_compress -X .py
+
 # Provider plugin libaries are not shared libraries and do not belong in the
 # shlibs file.
 # librspreload is a LD_PRELOAD library and does not belong in the shlib files
