mana: Microsoft Azure Network Adapter (MANA) RDMA provider
Introduce a provider that exposes MANA devices to user applications.

Signed-off-by: Long Li <longli@microsoft.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -713,6 +713,8 @@ add_subdirectory(providers/efa/man)
 add_subdirectory(providers/erdma)
 add_subdirectory(providers/hns)
 add_subdirectory(providers/irdma)
+add_subdirectory(providers/mana)
+add_subdirectory(providers/mana/man)
 add_subdirectory(providers/mlx4)
 add_subdirectory(providers/mlx4/man)
 add_subdirectory(providers/mlx5)
