build: Fix python library location
[ Upstream commit 9dac595b414c50847b48e63d1826dadac0207af8 ]

Appending the cmake installation prefix to python path leads to a wrong
python location path.
The python install location should be determined by sysconfig's platlib.
Example of sysconfig python paths:
	platinclude = "/usr/include/python3.8"
	platlib = "/usr/lib64/python3.8/site-packages"
	platstdlib = "/usr/lib64/python3.8"
	purelib = "/usr/lib/python3.8/site-packages"
	scripts = "/usr/bin"
	stdlib = "/usr/lib64/python3.8"

Fixes: 58eec6b82c66 ("build: Fix distutils deprecation warning during vuild")
Signed-off-by: Edward Srouji <edwards@nvidia.com>
Signed-off-by: Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -428,10 +428,10 @@ if (CYTHON_EXECUTABLE)
 
  # Get a default installation path
   execute_process(COMMAND "${PYTHON_EXECUTABLE}" -c
-    "import sysconfig; print(sysconfig.get_path(\"platstdlib\"))"
+    "import sysconfig; print(sysconfig.get_path(\"platlib\"))"
   OUTPUT_VARIABLE py_path)
   string(STRIP ${py_path} py_path)
-  set(CMAKE_INSTALL_PYTHON_ARCH_LIB "${CMAKE_INSTALL_PREFIX}${py_path}"
+  set(CMAKE_INSTALL_PYTHON_ARCH_LIB "${py_path}"
   CACHE PATH "Location for architecture specific python libraries")
 
  # See PEP3149
