--- a/buildlib/azure-pipelines-release.yml
+++ b/buildlib/azure-pipelines-release.yml
@@ -20,7 +20,7 @@ stages:
       - job: SrcPrep
         displayName: Build Source Tar
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         container: azp
         steps:
           - checkout: self
