--- a/kernel-headers/CMakeLists.txt
+++ b/kernel-headers/CMakeLists.txt
@@ -48,9 +48,9 @@ function(rdma_kernel_provider_abi)
     set(HDRS ${HDRS} ${OHDR})
     add_custom_command(
       OUTPUT "${OHDR}"
-      COMMAND "${PYTHON_EXECUTABLE}" "${CMAKE_SOURCE_DIR}/buildlib/make_abi_structs.py" "${IHDR}" "${OHDR}"
+      COMMAND "${PYTHON_EXECUTABLE}" "${PROJECT_SOURCE_DIR}/buildlib/make_abi_structs.py" "${IHDR}" "${OHDR}"
       MAIN_DEPENDENCY "${IHDR}"
-      DEPENDS "${CMAKE_SOURCE_DIR}/buildlib/make_abi_structs.py"
+      DEPENDS "${PROJECT_SOURCE_DIR}/buildlib/make_abi_structs.py"
       WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
       COMMENT "Creating ABI wrapper ${OHDR}"
       )
