--- a/providers/mlx5/CMakeLists.txt
+++ b/providers/mlx5/CMakeLists.txt
@@ -27,6 +27,7 @@ rdma_shared_provider(mlx5 libmlx5.map
   dr_ste.c
   dr_ste_v0.c
   dr_ste_v1.c
+  dr_ste_v2.c
   dr_table.c
   dr_send.c
   dr_vports.c
