srp_daemon: Detect proper path to systemctl
[ Upstream commit 05a19e050278ed54ce22a560ab62d20a2cf5cb64 ]

While debian uses /bin/systemctl, SUSE only supports /usr/bin/systemctl,
causing srp_daemon to fail silently starting on all ports.
Detect at built which path is the right one and use it.

Fixes: b03beb142e0d ("srp_daemon: Call systemctl properly from udev")
Signed-off-by: Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,8 @@ endif()
 RDMA_BuildType()
 include_directories(${BUILD_INCLUDE})
 
+find_program(SYSTEMCTL_BIN systemctl HINTS "/usr/bin" "/bin")
+
 RDMA_CheckSparse()
 
 # Require GNU99 mode
