--- a/ib2roce/CMakeLists.txt
+++ b/ib2roce/CMakeLists.txt
@@ -1,28 +1,1 @@
-include_directories("linux")
-include_directories("/usr/local/include/mstflint")
-include_directories(${NL_INCLUDE_DIRS})
-link_directories("/usr/local/lib/mstflint")
-
-rdma_executable(ib2roce
-  ib2roce.c
-  util.c
-  ibraw.c
-  )
-target_link_libraries(ib2roce LINK_PRIVATE
-  ibverbs
-  ibumad
-  rdmacm
-  ${NL_LIBRARIES}
-  ${SYSTEMD_LIBRARIES}
-  ${CMAKE_THREAD_LIBS_INIT}
-  mtcr_ul
-  cmdif
-  reg_access
-  dev_mgt
-  tools_layouts
-  ${CMAKE_DL_LIBS}
-  )
-rdma_man_pages(
-  man/ib2roce.1
-  man/ib2roce.7
-  )
+CMakeLists.txt-NO_MSTFLINT
