cmake: Add default for SYSTEMCTL_BIN option.
[ Upstream commit cc340db62e6fcd7034f1b020d27cf407de6b425e ]

If systemctl is not found automatically, fallback to /bin/systemctl
This fixes a build issue on debian systems where the minimal chroot does
not contain systemd.

Fixes: 05a19e050278 ("srp_daemon: Detect proper path to systemctl")
Reported-by: Benjamin Drung <benjamin.drung@ionos.com>
Signed-off-by: Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,9 @@ RDMA_BuildType()
 include_directories(${BUILD_INCLUDE})
 
 find_program(SYSTEMCTL_BIN systemctl HINTS "/usr/bin" "/bin")
+if (NOT SYSTEMCTL_BIN)
+  set (SYSTEMCTL_BIN "/bin/systemctl")
+endif()
 
 RDMA_CheckSparse()
 
