debian: Update my email address to @ubuntu.com
I left IONOS by end of March 2022 and joined the Foundation team at
Canonical. I will continue maintaining the rdma-core Debian/Ubuntu
package as part of my new job.

Signed-off-by: Benjamin Drung <bdrung@ubuntu.com>

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: rdma-core
-Maintainer: Benjamin Drung <benjamin.drung@ionos.com>
+Maintainer: Benjamin Drung <bdrung@ubuntu.com>
 Section: net
 Priority: optional
 Build-Depends: cmake (>= 2.8.11),
