providers/erdma: Add to the build environment
Make the build system can build the provider, and add erdma to redhat package
environment and debian pkg build environment.

Signed-off-by: Cheng Xu <chengyou@linux.alibaba.com>

--- a/debian/control
+++ b/debian/control
@@ -93,6 +93,7 @@ Description: User space provider drivers for libibverbs
   - bnxt_re: Broadcom NetXtreme-E RoCE HCAs
   - cxgb4: Chelsio T4 iWARP HCAs
   - efa: Amazon Elastic Fabric Adapter
+  - erdma: Alibaba Elastic RDMA (iWarp) Adapter
   - hfi1verbs: Intel Omni-Path HFI
   - hns: HiSilicon Hip06 SoC
   - ipathverbs: QLogic InfiniPath HCAs
