tests: Add huge page allocation tests
Add tests that create RDMA objects with different huge page allocation
types.

Signed-off-by: Elyashiv Cohen <elyashivc@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ rdma_python_test(tests
   test_mlx5_dma_memcpy.py
   test_mlx5_dr.py
   test_mlx5_flow.py
+  test_mlx5_huge_page.py
   test_mlx5_lag_affinity.py
   test_mlx5_mkey.py
   test_mlx5_pp.py
