Install 70-persistent-ipoib.rules into docs instead of /etc
This rdma-core Debian package ships the udev rule
`70-persistent-ipoib.rules` and installs it under `/etc/udev/rules.d`,
which is reserved for user-installed files.

Install `70-persistent-ipoib.rules` into `/usr/share/doc/rdma-core`
instead of `/etc/udev/rules.d` and document to copy this file into
`/etc/udev/rules.d` before editing.

Bug-Debian: https://bugs.debian.org/958385
Signed-off-by: Benjamin Drung <bdrung@ubuntu.com>

--- a/kernel-boot/persistent-ipoib.rules.in
+++ b/kernel-boot/persistent-ipoib.rules.in
@@ -1,6 +1,7 @@
 # This is a sample udev rules file that demonstrates how to get udev to
-# set the name of IPoIB interfaces to whatever you wish.  There is a
-# 16 character limit on network device names.
+# set the name of IPoIB interfaces to whatever you wish.  Copy this file
+# into @CMAKE_INSTALL_SYSCONFDIR@/udev/rules.d before editing it!  There is a 16 character limit
+# on network device names.
 #
 # Important items to note: ATTR{type}=="32" is IPoIB interfaces, and the
 # ATTR{address} match must start with ?* and only reference the last 8
