--- a/pyverbs/CMakeLists.txt
+++ b/pyverbs/CMakeLists.txt
@@ -1,9 +1,11 @@
 # SPDX-License-Identifier: (GPL-2.0 OR Linux-OpenIB)
 # Copyright (c) 2019, Mellanox Technologies. All rights reserved. See COPYING file
 # Copyright (c) 2020, Intel Corporation. All rights reserved. See COPYING file
+# Copyright 2023 Amazon.com, Inc. or its affiliates. All rights reserved.
 
 publish_internal_headers(""
   drm_dmabuf_alloc.h
+  habana_dmabuf_alloc.h
 )
 
 if (DRM_INCLUDE_DIRS)
@@ -12,11 +14,23 @@ else()
   set(DRM_DMABUF_ALLOC drm_dmabuf_alloc_stub.c)
 endif()
 
+if (HABANA_INCLUDE_DIR)
+  set(HABANA_DMABUF_ALLOC habana_dmabuf_alloc.c)
+else()
+  set(HABANA_DMABUF_ALLOC habana_dmabuf_alloc_stub.c)
+endif()
+
 if (HAVE_COHERENT_DMA)
   set(DMA_UTIL dma_util.pyx)
 else()
   set(DMA_UTIL "")
 endif()
+
+rdma_cython_module(pyverbs "${DMABUF_LINKER_FLAGS}"
+  dmabuf.pyx
+  ${DRM_DMABUF_ALLOC}
+  ${HABANA_DMABUF_ALLOC}
+)
 
 rdma_cython_module(pyverbs ""
   addr.pyx
@@ -26,8 +40,6 @@ rdma_cython_module(pyverbs ""
   cq.pyx
   device.pyx
   ${DMA_UTIL}
-  dmabuf.pyx
-  ${DRM_DMABUF_ALLOC}
   enums.pyx
   flow.pyx
   fork.pyx
