pyverbs: Add general support for new HW accelerators
Add infrastructure to support additional dmabuf exporters. For new HW
accelerator support need to add:
1. <gpu>_dmabuf_alloc source code, header file and stub.
2. Cython struct in dmabuf.pyx.

Signed-off-by: Yonatan Nachum <ynachum@amazon.com>
Change-Id: I728de8ac6d36563cbd2f30fb59e290d19aee230b

--- a/pyverbs/CMakeLists.txt
+++ b/pyverbs/CMakeLists.txt
@@ -3,13 +3,13 @@
 # Copyright (c) 2020, Intel Corporation. All rights reserved. See COPYING file
 
 publish_internal_headers(""
-  dmabuf_alloc.h
+  drm_dmabuf_alloc.h
 )
 
 if (DRM_INCLUDE_DIRS)
-  set(DMABUF_ALLOC dmabuf_alloc.c)
+  set(DRM_DMABUF_ALLOC drm_dmabuf_alloc.c)
 else()
-  set(DMABUF_ALLOC dmabuf_alloc_stub.c)
+  set(DRM_DMABUF_ALLOC drm_dmabuf_alloc_stub.c)
 endif()
 
 if (HAVE_COHERENT_DMA)
@@ -27,7 +27,7 @@ rdma_cython_module(pyverbs ""
   device.pyx
   ${DMA_UTIL}
   dmabuf.pyx
-  ${DMABUF_ALLOC}
+  ${DRM_DMABUF_ALLOC}
   enums.pyx
   flow.pyx
   fork.pyx
