buildlib: azure: fix changelog generation for releases
Tune azure-pipelines-releases.yml with the snippet added by 84713a3d89e4 ("stable: Tune stable branch creation process")

Signed-off-by: Nicolas Morey <nmorey@suse.com>

--- a/buildlib/azure-pipelines-release.yml
+++ b/buildlib/azure-pipelines-release.yml
@@ -46,3 +46,5 @@ stages:
               action: create
               isDraft: true
               addChangeLog: true
+              changeLogCompareToRelease: lastNonDraftReleaseByTag
+              changeLogCompareToReleaseTag: v34.*
