buildlib: fix azure regexp to trigger builds for v5*
Signed-off-by: Nicolas Morey <nmorey@suse.com>

--- a/buildlib/azure-pipelines.yml
+++ b/buildlib/azure-pipelines.yml
@@ -2,20 +2,12 @@
 
 trigger:
   - master
+  - stable-v5*
   - stable-v4*
   - stable-v3*
-  - stable-v29
-  - stable-v28
-  - stable-v27
-  - stable-v26
-  - stable-v25
+  - dev/stable-v5*/*
   - dev/stable-v4*/*
   - dev/stable-v3*/*
-  - dev/stable-v29/*
-  - dev/stable-v28/*
-  - dev/stable-v27/*
-  - dev/stable-v26/*
-  - dev/stable-v25/*
 pr:
   - master
 
