tests: Add tests to cover new DV dmabuf API
Add tests to cover the new functionality of data direct.
 1. Create DV dmabuf MR with mlx5_access=0, and run traffic.
 2. Query data-direct sysfs path and create DV dmabuf MR with
    mlx5_access of DATA_DIRECT and run traffic.
 3. Query data-direct sysfs path bad flow.

Signed-off-by: Shachar Kagan <skagan@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,6 +30,7 @@ rdma_python_test(tests
   test_mlx5_devx.py
   test_mlx5_dm_ops.py
   test_mlx5_dma_memcpy.py
+  test_mlx5_dmabuf.py
   test_mlx5_dr.py
   test_mlx5_flow.py
   test_mlx5_huge_page.py
