tests: Add tests to cover mlx5 OOO QP
Add tests to cover mlx5 out-of-order QP

Signed-off-by: Maxim Chicherin <maximc@nvidia.com>
Signed-off-by: Edward Srouji <edwards@nvidia.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ rdma_python_test(tests
   test_mlx5_huge_page.py
   test_mlx5_lag_affinity.py
   test_mlx5_mkey.py
+  test_mlx5_ooo_qp.py
   test_mlx5_pp.py
   test_mlx5_query_port.py
   test_mlx5_raw_wqe.py
