libibmad: Add support SMI & GSI devices (POC)
Added internal API for store SMI/GSI pairs
 - find_ports_record
 - add_ports_record
 - remove_port_record_ptr
 - remove_port_record

Chagned rpc functions:
 - rpc_open
 - close
 - _do_madrpc

Signed-off-by: Gregory Linschitz <gregoryl@nvidia.com>

--- a/libibmad/CMakeLists.txt
+++ b/libibmad/CMakeLists.txt
@@ -24,6 +24,8 @@ rdma_library(ibmad libibmad.map
   serv.c
   smp.c
   vendor.c
+  ext_umad.c
+  smi_gsi.c
   )
 target_link_libraries(ibmad LINK_PRIVATE
   ibumad
